# labs-asd

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: main.cpp
